@@ -1,5 +1,8 @@
 2007-02-10  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c (job_find_by_pid): Check aux_pid as well.
+	* init/tests/test_job.c (test_find_by_pid): Make sure we can find it.
+
 	* init/job.h (Job): Add an auxiliary pid member.
 	* init/job.c (job_new): Initialise the aux_pid member.
 	(job_change_state): Run the post-start and pre-stop scripts when we
